CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( Goertek_My_Matrix )





AUX_SOURCE_DIRECTORY( src DIR_SRC )

AUX_SOURCE_DIRECTORY( . DIR_MAIN )


INCLUDE_DIRECTORIES( include ${OpenCV_INCLUDE_DIRS} )
FIND_PACKAGE( OpenCV REQUIRED ) 




#ADD_EXECUTABLE( Goertek_My_Matrix ${SRC_DIR} ${DIR_MAIN} )

ADD_LIBRARY( Goertek_My_Matrix_SHARED SHARED ${DIR_SRC} )


ADD_LIBRARY( Goertek_My_Matrix ${DIR_SRC} )


TARGET_LINK_LIBRARIES( Goertek_My_Matrix_SHARED ${OpenCV_LIBS} ${DIR_SRC} )


TARGET_LINK_LIBRARIES( Goertek_My_Matrix ${OpenCV_LIBS} ${DIR_SRC} )
